# crank-lend

./: .gitignore  Anchor.toml  Cargo.toml  liquidation_bot.md  margin-claude.md  package.json
bots/liquidation-keeper/: ecosystem.config.js  package.json  tsconfig.json
bots/liquidation-keeper/src/: config.ts  health-monitor.ts  index.ts  keeper-oracle.ts  poke-bot.ts
clients/rust/marginfi-cli/: Cargo.toml
id-crate/src/: lib.rs
programs/liquidator-vault/: Cargo.toml
programs/liquidator-vault/src/: lib.rs
programs/liquidator-vault/src/instructions/: deposit.rs  dry_powder.rs  execute_liquidation.rs  initialize.rs  mod.rs  withdraw.rs
programs/liquidator-vault/src/state/: vault.rs
programs/marginfi/: Cargo.toml
programs/marginfi/fuzz/: Cargo.toml
programs/marginfi/src/: constants.rs  errors.rs  ix_utils.rs  lib.rs
programs/marginfi/src/state/: bank.rs  fee_state.rs  keeper_oracle.rs  marginfi_account.rs  mod.rs  price.rs
programs/marginfi/src/utils/: general.rs  mod.rs
programs/marginfi/tests/admin_actions/: bankruptcy.rs  bankruptcy_auth.rs  create_marginfi_group.rs  deleverage.rs  freeze.rs  interest_accrual.rs  setup_bank.rs  withdraw_fees.rs
programs/mocks/: Cargo.toml
test-utils/: Cargo.toml
test-utils/src/: bank.rs  marginfi_account.rs  marginfi_group.rs  test.rs
tests/: genericSetups.ts  m01_accountLimits.spec.ts  rootHooks.ts
tests/utils/: bankrun-oracles.ts  genericTests.ts  mocks.ts  pdas.ts  pyth-pull-mocks.ts  types.ts
type-crate/src/: constants.rs
type-crate/src/types/: bank.rs  bank_config.rs
(+29 files in other folders)
